- Move highlighting style to stylesheet - Wrap websocketJS code in self-executing function to prevent polluting global

--- a/public/yuzu-def-ui/overlay.css
+++ b/public/yuzu-def-ui/overlay.css
@@ -1,3 +1,10 @@
+/* .yuzu-highlight-active {
+  
+} */
+
+.yuzu-highlighted-block {
+  box-shadow: rgb(255, 0, 0) 0px 0px 0px 3px inset!important;
+}
 .yuzu-feather-icon {
   fill: none;
   stroke: currentColor;
